a bunch of changes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,22 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{iclr = {International Conference on Learning Representations}}
 
 @book{einstein1956investigations,
   title={Investigations on the Theory of the Brownian Movement},
   author={Einstein, Albert},
   year={1956},
   publisher={Courier Corporation,}
+}
+
+@inproceedings{abdelfattah2021zerocost,
+  title={Zero-Cost Proxies for Lightweight NAS},
+  author={Mohamed S Abdelfattah and Abhinav Mehrotra and Łukasz Dudziak and Nicholas Lane},
+  booktitle=iclr,
+  abbr={ICLR},
+  year={2021},
+  pdf={https://openreview.net/forum?id=0cmMMy8J5q}
 }
 
 @article{einstein1950meaning,
