pubs almost there - confs and journals done, patents, books and theses remain

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,79 +1,229 @@
 ---
 ---
 
-@string{iclr = {International Conference on Learning Representations}}
-
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
-}
-
-@inproceedings{abdelfattah2021zerocost,
+@inproceedings{0,
   title={Zero-Cost Proxies for Lightweight NAS},
-  author={Mohamed S Abdelfattah and Abhinav Mehrotra and Łukasz Dudziak and Nicholas Lane},
-  booktitle=iclr,
+  author={Mohamed S. Abdelfattah and Abhinav Mehrotra and Łukasz Dudziak and Nicholas D. Lane},
+  booktitle={International Conference on Learning Representations},
   abbr={ICLR},
   year={2021},
-  pdf={https://openreview.net/forum?id=0cmMMy8J5q}
+  pdf={https://openreview.net/pdf?id=0cmMMy8J5q}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{1,
+  title={NAS-Bench-ASR: Reproducible Neural Architecture Search for Speech Recognition},
+  author={Abhinav Mehrotra and Alberto Gil C. P. Ramos and Sourav Bhattacharya and Łukasz Dudziak and Ravichander Vipperla and Thomas Chau and Mohamed S. Abdelfattah and Samin Ishtiaq and Nicholas D. Lane},
+  booktitle={International Conference on Learning Representations},
+  abbr={ICLR},
+  year={2021},
+  pdf={https://openreview.net/pdf?id=CU0APx9LMaL}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@inproceedings{2,
+  title={BRP-NAS: Prediction-based NAS using GCNs},
+  author={Łukasz Dudziak and Thomas Chau and Mohamed S. Abdelfattah and Royson Lee and Hyeji Kim and Nicholas D. Lane},
+  booktitle={Conference on Neural Information Processing Systems},
+  abbr={NeurIPS},
+  year={2020},
+  pdf={https://arxiv.org/pdf/2007.08668.pdf}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{3,
+  title={Iterative Compression of End-to-End ASR Model Using Reinforcement learning},
+  author={Abhinav Mehrotra and Łukasz Dudziak and Jinsu Yeo and Younyoon Lee and Ravichander Vipperla and Mohamed S. Abdelfattah and Sangjeong Lee and Daehyun Kim and Nicholas D. Lane},
+  booktitle={Conference of the International Speech Communication Association},
+  abbr={INTERSPEECH},
+  year={2020},
+  pdf={https://arxiv.org/pdf/2008.02897.pdf}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{4,
+  title={Journey Towards Tiny Perceptual Super-Resolution},
+  author={Royson Lee and Łukasz Dudziak and Mohamed S. Abdelfattah and Hyeji Kim and Stylianos Veneris and Hongkai Wen and Nicholas D. Lane},
+  booktitle={European Conference on Computer Vision},
+  abbr={ECCV},
+  year={2020},
+  pdf={https://arxiv.org/pdf/2007.04356.pdf}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{5,
+  title={Best of Both Worlds: AutoML Codesign of a CNN and its Hardware Accelerator},
+  author={Mohamed S. Abdelfattah and Łukasz Dudziak and Thomas Chau and Royson Lee and Hyeji Kim and Nicholas D. Lane},
+  booktitle={Design Automation Conference},
+  abbr={DAC},
+  year={2020},
+  pdf={https://arxiv.org/pdf/2002.05022.pdf}
 }
+
+@inproceedings{7,
+  title={ShrinkML: End-to-End ASR Model Compression Using Reinforcement Learning},
+  author={Łukasz Dudziak and Mohamed S. Abdelfattah and Ravichander Vipperla and Stefanos Laskaridis and Nicholas D. Lane},
+  booktitle={Conference of the International Speech Communication Association},
+  abbr={INTERSPEECH},
+  year={2019},
+  pdf={https://arxiv.org/pdf/1907.03540.pdf}
+}
+
+@inproceedings{8,
+  title={DLA: Compiler and FPGA Overlay for Neural Network Inference Acceleration},
+  author={Mohamed S. Abdelfattah and David Han and Andrew Bitar and Roberto DiCecco and Shane O’Connell and Nitika Shanker and Joseph Chu and Ian Prins and Joshua Fender and Andrew C. Ling and Gordon R. Chiu},
+  booktitle={International Conference on Field-Programmable Logic and Applications},
+  abbr={FPL},
+  year={2018},
+  pdf={https://arxiv.org/pdf/1807.06434.pdf}
+}
+
+@inproceedings{9,
+  title={Harnessing Numerical Flexibility for Deep Learning on FPGAs},
+  author={Andrew C. Ling and Mohamed S. Abdelfattah and Shane O'Connell and Andrew Bitar and David Han and Roberto Dicecco and Suchit Subhaschandra and Chris N Johnson and Dmitry Denisenko and Josh Fender and Gordon R. Chiu},
+  booktitle={International Symposium on Highly-Efficient Accelerators and Reconfigurable Technologies},
+  abbr={HEART},
+  year={2018},
+  pdf={/assets/pdf/heart18.pdf}
+}
+
+@inproceedings{10,
+  title={Flexibility: FPGAs and CAD in Deep Learning Acceleration},
+  author={Gordon R. Chiu and Andrew C. Ling and Davor Capalija and Andrew Bitar and Mohamed S. Abdelfattah},
+  booktitle={International Symposium on Physical Design},
+  abbr={ISPD},
+  year={2018},
+  pdf={/assets/pdf/ispd18.pdf}
+}
+
+@article{11,
+  title={Design and applications for embedded networks-on-chip on FPGAs},
+  author={Mohamed S. Abdelfattah and Andrew Bitar and Vaughn Betz},
+  journal={IEEE Transactions on Computers},
+  abbr={TCOMP},
+  year={2016},
+  pdf={/assets/pdf/tcomp16.pdf}
+}
+
+@inproceedings{13,
+  title={LYNX: CAD for FPGA-based networks-on-chip},
+  author={Mohamed S. Abdelfattah and Vaughn Betz},
+  booktitle={International Conference on Field-Programmable Logic and Applications},
+  abbr={FPL},
+  year={2016},
+  pdf={/assets/pdf/fpl16.pdf}
+}
+
+@inproceedings{14,
+  title={Bringing programmability to the data plane: Packet processing with a NoC-enhanced FPGA},
+  author={Andrew Bitar and Mohamed S. Abdelfattah and Vaughn Betz},
+  booktitle={International Conference on Field-Programmable Technology},
+  abbr={FPT},
+  year={2015},
+  pdf={/assets/pdf/fpt15.pdf}
+}
+
+@inproceedings{15,
+  title={Design and simulation tools for Embedded NOCs on FPGAs},
+  author={Mohamed S. Abdelfattah and Andrew Bitar and Ange Yaghi and Vaughn Betz},
+  booktitle={International Conference on Field-Programmable Logic and Applications},
+  abbr={FPL},
+  year={2015},
+  pdf={/assets/pdf/fpl15.pdf}
+}
+
+@inproceedings{17,
+  title={Take the highway: Design for embedded NoCs on FPGAs},
+  author={Mohamed S. Abdelfattah and Andrew Bitar and Vaughn Betz},
+  booktitle={International Symposium on Field-Programmable Gate Arrays},
+  abbr={FPGA},
+  year={2015},
+  pdf={/assets/pdf/fpga15.pdf}
+}
+
+@article{18,
+  title={Power analysis of embedded NoCs on FPGAs and comparison with custom buses},
+  author={Mohamed S. Abdelfattah and Vaughn Betz},
+  journal={IEEE Transactions on Very Large-Scale Integration Systems},
+  abbr={TVLSI},
+  year={2015},
+  pdf={/assets/pdf/tvlsi15.pdf}
+}
+
+@article{20,
+  title={Networks-on-Chip for FPGAs: Hard, Soft or Mixed?},
+  author={Mohamed S. Abdelfattah and Vaughn Betz},
+  journal={ACM Transactions on Reconfigurable Technology and Systems},
+  abbr={TRETS},
+  year={2014},
+  pdf={/assets/pdf/trets14.pdf}
+}
+
+@inproceedings{21,
+  title={Gzip on a chip: High performance lossless data compression on fpgas using opencl},
+  author={Mohamed S. Abdelfattah and Andrei Hagiescu and Desh Singh},
+  booktitle={International Workshop on OpenCL},
+  abbr={IWOCL},
+  year={2014},
+  pdf={/assets/pdf/iwocl14.pdf}
+}
+
+@article{22,
+  title={The Case for Embedded Networks-on-Chip on FPGAs},
+  author={Mohamed S. Abdelfattah and Vaughn Betz},
+  journal={IEEE Micro Magazine},
+  abbr={MICRO},
+  year={2014},
+  pdf={/assets/pdf/micro14.pdf}
+}
+
+@inproceedings{23,
+  title={Augmenting FPGAs with Embedded Networks on Chip},
+  author={Mohamed S. Abdelfattah and Vaughn Betz},
+  booktitle={Workshop on the Intersection of Computer Architecture and Reconfigurable Logic},
+  abbr={CARL},
+  year={2013},
+  pdf={/assets/pdf/carl13.pdf}
+}
+
+@inproceedings{24,
+  title={The Power of Communication: Energy-Efficient NoCs for FPGAs},
+  author={Mohamed S. Abdelfattah and Vaughn Betz},
+  booktitle={International Conference on Field-Programmable Logic and Applications},
+  abbr={FPL},
+  year={2013},
+  pdf={/assets/pdf/fpl13.pdf}
+}
+
+@inproceedings{25,
+  title={Design tradeoffs for hard and soft FPGA-based Networks-on-Chip},
+  author={Mohamed S. Abdelfattah and Vaughn Betz},
+  booktitle={International Conference on Field-Programmable Technology},
+  abbr={FPT},
+  year={2012},
+  pdf={/assets/pdf/fpt12.pdf}
+}
+
+@inproceedings{26,
+  title={Transparent Structural Online Test for Reconfigurable Systems},
+  author={Mohamed S. Abdelfattah and Lars Bauer and Claus Braun and Michael E Imhof and Michael A Kochte and Hongyan Zhang and Jörg Henkel and Hans-Joachim Wunderlich},
+  booktitle={International Symposium on On-Line Testing and Robust System Design},
+  abbr={IOLTS},
+  year={2012},
+  pdf={/assets/pdf/iolts12.pdf}
+}
+
+@inproceedings{27,
+  title={2.2 GHz LC VCO for RFID on a 0.5-$\mu$m digital gate-array designed for ultra-thin silicon substrates},
+  author={Mohamed S. Abdelfattah and Damir Ferenci and Markus Grözing and Manfred Berroth and Cor Scherjon and Joachim Burghartz},
+  booktitle={German Microwave Conference},
+  abbr={GeMiC},
+  year={2011},
+  pdf={/assets/pdf/gemic11.pdf}
+}
+
+@inproceedings{29,
+  title={Design of a RF Transmitter for RFID Tags in a New Technology with Ultra Thin Silicon Substrates},
+  author={Mohamed S. Abdelfattah and Damir Ferenci and Markus Grözing and Manfred Berroth and Cor Scherjon and Joachim N Burghartz},
+  booktitle={Workshop on Circuit Design and Digital Signal Processing},
+  abbr={ProRISC},
+  year={2009},
+  pdf={/assets/pdf/prorisc09.pdf}
+}
+
+​
