add awards to publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   booktitle={International Conference on Learning Representations},
   abbr={ICLR},
   year={2021},
-  pdf={https://openreview.net/pdf?id=0cmMMy8J5q}
+  pdf={https://openreview.net/pdf?id=0cmMMy8J5q},
 }
 
 @inproceedings{1,
@@ -16,7 +16,7 @@
   booktitle={International Conference on Learning Representations},
   abbr={ICLR},
   year={2021},
-  pdf={https://openreview.net/pdf?id=CU0APx9LMaL}
+  pdf={https://openreview.net/pdf?id=CU0APx9LMaL},
 }
 
 @inproceedings{2,
@@ -25,7 +25,7 @@
   booktitle={Conference on Neural Information Processing Systems},
   abbr={NeurIPS},
   year={2020},
-  pdf={https://arxiv.org/pdf/2007.08668.pdf}
+  pdf={https://arxiv.org/pdf/2007.08668.pdf},
 }
 
 @inproceedings{3,
@@ -34,7 +34,7 @@
   booktitle={Conference of the International Speech Communication Association},
   abbr={INTERSPEECH},
   year={2020},
-  pdf={https://arxiv.org/pdf/2008.02897.pdf}
+  pdf={https://arxiv.org/pdf/2008.02897.pdf},
 }
 
 @inproceedings{4,
@@ -43,7 +43,7 @@
   booktitle={European Conference on Computer Vision},
   abbr={ECCV},
   year={2020},
-  pdf={https://arxiv.org/pdf/2007.04356.pdf}
+  pdf={https://arxiv.org/pdf/2007.04356.pdf},
 }
 
 @inproceedings{5,
@@ -52,7 +52,7 @@
   booktitle={Design Automation Conference},
   abbr={DAC},
   year={2020},
-  pdf={https://arxiv.org/pdf/2002.05022.pdf}
+  pdf={https://arxiv.org/pdf/2002.05022.pdf},
 }
 
 @inproceedings{7,
@@ -61,7 +61,7 @@
   booktitle={Conference of the International Speech Communication Association},
   abbr={INTERSPEECH},
   year={2019},
-  pdf={https://arxiv.org/pdf/1907.03540.pdf}
+  pdf={https://arxiv.org/pdf/1907.03540.pdf},
 }
 
 @inproceedings{8,
@@ -70,7 +70,7 @@
   booktitle={International Conference on Field-Programmable Logic and Applications},
   abbr={FPL},
   year={2018},
-  pdf={https://arxiv.org/pdf/1807.06434.pdf}
+  pdf={https://arxiv.org/pdf/1807.06434.pdf},
 }
 
 @inproceedings{9,
@@ -79,7 +79,7 @@
   booktitle={International Symposium on Highly-Efficient Accelerators and Reconfigurable Technologies},
   abbr={HEART},
   year={2018},
-  pdf={/assets/pdf/heart18.pdf}
+  pdf={/assets/pdf/heart18.pdf},
 }
 
 @inproceedings{10,
@@ -88,7 +88,7 @@
   booktitle={International Symposium on Physical Design},
   abbr={ISPD},
   year={2018},
-  pdf={/assets/pdf/ispd18.pdf}
+  pdf={/assets/pdf/ispd18.pdf},
 }
 
 @article{11,
@@ -97,7 +97,7 @@
   journal={IEEE Transactions on Computers},
   abbr={TCOMP},
   year={2016},
-  pdf={/assets/pdf/tcomp16.pdf}
+  pdf={/assets/pdf/tcomp16.pdf},
 }
 
 @inproceedings{13,
@@ -106,7 +106,8 @@
   booktitle={International Conference on Field-Programmable Logic and Applications},
   abbr={FPL},
   year={2016},
-  pdf={/assets/pdf/fpl16.pdf}
+  pdf={/assets/pdf/fpl16.pdf},
+  award={Nominated for the Michel Servit best paper award.},
 }
 
 @inproceedings{14,
@@ -115,7 +116,7 @@
   booktitle={International Conference on Field-Programmable Technology},
   abbr={FPT},
   year={2015},
-  pdf={/assets/pdf/fpt15.pdf}
+  pdf={/assets/pdf/fpt15.pdf},
 }
 
 @inproceedings{15,
@@ -124,7 +125,7 @@
   booktitle={International Conference on Field-Programmable Logic and Applications},
   abbr={FPL},
   year={2015},
-  pdf={/assets/pdf/fpl15.pdf}
+  pdf={/assets/pdf/fpl15.pdf},
 }
 
 @inproceedings{17,
@@ -133,7 +134,8 @@
   booktitle={International Symposium on Field-Programmable Gate Arrays},
   abbr={FPGA},
   year={2015},
-  pdf={/assets/pdf/fpga15.pdf}
+  pdf={/assets/pdf/fpga15.pdf},
+  award={Best Paper Award},
 }
 
 @article{18,
@@ -142,7 +144,7 @@
   journal={IEEE Transactions on Very Large-Scale Integration Systems},
   abbr={TVLSI},
   year={2015},
-  pdf={/assets/pdf/tvlsi15.pdf}
+  pdf={/assets/pdf/tvlsi15.pdf},
 }
 
 @article{20,
@@ -151,16 +153,16 @@
   journal={ACM Transactions on Reconfigurable Technology and Systems},
   abbr={TRETS},
   year={2014},
-  pdf={/assets/pdf/trets14.pdf}
+  pdf={/assets/pdf/trets14.pdf},
 }
 
 @inproceedings{21,
   title={Gzip on a chip: High performance lossless data compression on fpgas using opencl},
-  author={Mohamed S. Abdelfattah and Andrei Hagiescu and Desh Singh},
+  author={Mohamed S. Abdelfattah and Andrei Hagiescu and Deshanand Singh},
   booktitle={International Workshop on OpenCL},
   abbr={IWOCL},
   year={2014},
-  pdf={/assets/pdf/iwocl14.pdf}
+  pdf={/assets/pdf/iwocl14.pdf},
 }
 
 @article{22,
@@ -169,7 +171,7 @@
   journal={IEEE Micro Magazine},
   abbr={MICRO},
   year={2014},
-  pdf={/assets/pdf/micro14.pdf}
+  pdf={/assets/pdf/micro14.pdf},
 }
 
 @inproceedings{23,
@@ -178,7 +180,7 @@
   booktitle={Workshop on the Intersection of Computer Architecture and Reconfigurable Logic},
   abbr={CARL},
   year={2013},
-  pdf={/assets/pdf/carl13.pdf}
+  pdf={/assets/pdf/carl13.pdf},
 }
 
 @inproceedings{24,
@@ -187,7 +189,9 @@
   booktitle={International Conference on Field-Programmable Logic and Applications},
   abbr={FPL},
   year={2013},
-  pdf={/assets/pdf/fpl13.pdf}
+  pdf={/assets/pdf/fpl13.pdf},
+  award={Stamatis Vassiliadis best paper award.},
+  award2={Selected as one of the <a href=http://www.fpl2015.org/pdf/sig_papers.pdf>most significant papers</a> from the first 25 years of FPL.}
 }
 
 @inproceedings{25,
@@ -196,7 +200,7 @@
   booktitle={International Conference on Field-Programmable Technology},
   abbr={FPT},
   year={2012},
-  pdf={/assets/pdf/fpt12.pdf}
+  pdf={/assets/pdf/fpt12.pdf},
 }
 
 @inproceedings{26,
@@ -205,16 +209,16 @@
   booktitle={International Symposium on On-Line Testing and Robust System Design},
   abbr={IOLTS},
   year={2012},
-  pdf={/assets/pdf/iolts12.pdf}
+  pdf={/assets/pdf/iolts12.pdf},
 }
 
 @inproceedings{27,
-  title={2.2 GHz LC VCO for RFID on a 0.5-$\mu$m digital gate-array designed for ultra-thin silicon substrates},
+  title={2.2 GHz LC VCO for RFID on a 0.5-μm digital gate-array designed for ultra-thin silicon substrates},
   author={Mohamed S. Abdelfattah and Damir Ferenci and Markus Grözing and Manfred Berroth and Cor Scherjon and Joachim Burghartz},
   booktitle={German Microwave Conference},
   abbr={GeMiC},
   year={2011},
-  pdf={/assets/pdf/gemic11.pdf}
+  pdf={/assets/pdf/gemic11.pdf},
 }
 
 @inproceedings{29,
@@ -223,7 +227,5 @@
   booktitle={Workshop on Circuit Design and Digital Signal Processing},
   abbr={ProRISC},
   year={2009},
-  pdf={/assets/pdf/prorisc09.pdf}
+  pdf={/assets/pdf/prorisc09.pdf},
 }
-
-​
