--- a/_courses/ece5545.md
+++ b/_courses/ece5545.md
@@ -4,6 +4,6 @@ title: ECE 5545
 description: Machine Learning Hardware and Systems
 img: /assets/img/ece5545.jpg
 importance: 1
-redirect: https://abdelfattah-lab.github.io/ece5545/
+redirect: https://abdelfattah-class.github.io/ece5545/
 category: 
 ---
