--- a/_courses/ece5545.md
+++ b/_courses/ece5545.md
@@ -2,7 +2,7 @@
 layout: page
 title: ECE 5545
 description: Machine Learning Hardware and Systems
-img: /assets/img/ece5545.jpg
+img: /assets/img/ece5545_logo.jpeg
 importance: 1
 redirect: https://abdelfattah-class.github.io/ece5545/
 category: 
