--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,6 +30,16 @@
 }
 
 @inproceedings{3,
+  title={Temporal Kernel Consistency for Blind Video Super-Resolution},
+  author={Lichuan Chang and Royson Lee and Hongkai Wen and Mohamed S. Abdelfattah and Nicholas D. Lane},
+  booktitle={International Conference on Computer Vision Workshops},
+  abbr={ICCV},
+  year={2021},
+  pdf={https://arxiv.org/pdf/2108.08305.pdf},
+  award={ },
+}
+
+@inproceedings{4,
   title={BRP-NAS: Prediction-based NAS using GCNs},
   author={Łukasz Dudziak and Thomas Chau and Mohamed S. Abdelfattah and Royson Lee and Hyeji Kim and Nicholas D. Lane},
   booktitle={Conference on Neural Information Processing Systems},
@@ -38,7 +48,7 @@
   pdf={https://arxiv.org/pdf/2007.08668.pdf},
 }
 
-@inproceedings{4,
+@inproceedings{5,
   title={Iterative Compression of End-to-End ASR Model Using Reinforcement learning},
   author={Abhinav Mehrotra and Łukasz Dudziak and Jinsu Yeo and Younyoon Lee and Ravichander Vipperla and Mohamed S. Abdelfattah and Sangjeong Lee and Daehyun Kim and Nicholas D. Lane},
   booktitle={Conference of the International Speech Communication Association},
@@ -47,7 +57,7 @@
   pdf={https://arxiv.org/pdf/2008.02897.pdf},
 }
 
-@inproceedings{5,
+@inproceedings{6,
   title={Journey Towards Tiny Perceptual Super-Resolution},
   author={Royson Lee and Łukasz Dudziak and Mohamed S. Abdelfattah and Hyeji Kim and Stylianos Veneris and Hongkai Wen and Nicholas D. Lane},
   booktitle={European Conference on Computer Vision},
@@ -56,7 +66,7 @@
   pdf={https://arxiv.org/pdf/2007.04356.pdf},
 }
 
-@inproceedings{6,
+@inproceedings{7,
   title={Best of Both Worlds: AutoML Codesign of a CNN and its Hardware Accelerator},
   author={Mohamed S. Abdelfattah and Łukasz Dudziak and Thomas Chau and Royson Lee and Hyeji Kim and Nicholas D. Lane},
   booktitle={Design Automation Conference},
@@ -65,7 +75,7 @@
   pdf={https://arxiv.org/pdf/2002.05022.pdf},
 }
 
-@inproceedings{8,
+@inproceedings{9,
   title={ShrinkML: End-to-End ASR Model Compression Using Reinforcement Learning},
   author={Łukasz Dudziak and Mohamed S. Abdelfattah and Ravichander Vipperla and Stefanos Laskaridis and Nicholas D. Lane},
   booktitle={Conference of the International Speech Communication Association},
@@ -74,7 +84,7 @@
   pdf={https://arxiv.org/pdf/1907.03540.pdf},
 }
 
-@inproceedings{9,
+@inproceedings{10,
   title={DLA: Compiler and FPGA Overlay for Neural Network Inference Acceleration},
   author={Mohamed S. Abdelfattah and David Han and Andrew Bitar and Roberto DiCecco and Shane O’Connell and Nitika Shanker and Joseph Chu and Ian Prins and Joshua Fender and Andrew C. Ling and Gordon R. Chiu},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -83,7 +93,7 @@
   pdf={https://arxiv.org/pdf/1807.06434.pdf},
 }
 
-@inproceedings{10,
+@inproceedings{11,
   title={Harnessing Numerical Flexibility for Deep Learning on FPGAs},
   author={Andrew C. Ling and Mohamed S. Abdelfattah and Shane O'Connell and Andrew Bitar and David Han and Roberto Dicecco and Suchit Subhaschandra and Chris N Johnson and Dmitry Denisenko and Josh Fender and Gordon R. Chiu},
   booktitle={International Symposium on Highly-Efficient Accelerators and Reconfigurable Technologies},
@@ -92,7 +102,7 @@
   pdf={/assets/pdf/heart18.pdf},
 }
 
-@inproceedings{11,
+@inproceedings{12,
   title={Flexibility: FPGAs and CAD in Deep Learning Acceleration},
   author={Gordon R. Chiu and Andrew C. Ling and Davor Capalija and Andrew Bitar and Mohamed S. Abdelfattah},
   booktitle={International Symposium on Physical Design},
@@ -101,7 +111,7 @@
   pdf={/assets/pdf/ispd18.pdf},
 }
 
-@article{12,
+@article{13,
   title={Design and applications for embedded networks-on-chip on FPGAs},
   author={Mohamed S. Abdelfattah and Andrew Bitar and Vaughn Betz},
   journal={IEEE Transactions on Computers},
@@ -110,7 +120,7 @@
   pdf={/assets/pdf/tcomp16.pdf},
 }
 
-@inproceedings{14,
+@inproceedings{15,
   title={LYNX: CAD for FPGA-based networks-on-chip},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -120,7 +130,7 @@
   award={Nominated for the Michel Servit best paper award.},
 }
 
-@inproceedings{15,
+@inproceedings{16,
   title={Bringing programmability to the data plane: Packet processing with a NoC-enhanced FPGA},
   author={Andrew Bitar and Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Technology},
@@ -129,7 +139,7 @@
   pdf={/assets/pdf/fpt15.pdf},
 }
 
-@inproceedings{16,
+@inproceedings{17,
   title={Design and simulation tools for Embedded NOCs on FPGAs},
   author={Mohamed S. Abdelfattah and Andrew Bitar and Ange Yaghi and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -138,7 +148,7 @@
   pdf={/assets/pdf/fpl15.pdf},
 }
 
-@inproceedings{18,
+@inproceedings{19,
   title={Take the highway: Design for embedded NoCs on FPGAs},
   author={Mohamed S. Abdelfattah and Andrew Bitar and Vaughn Betz},
   booktitle={International Symposium on Field-Programmable Gate Arrays},
@@ -148,7 +158,7 @@
   award={Best Paper Award},
 }
 
-@article{19,
+@article{20,
   title={Power analysis of embedded NoCs on FPGAs and comparison with custom buses},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   journal={IEEE Transactions on Very Large-Scale Integration Systems},
@@ -157,7 +167,7 @@
   pdf={/assets/pdf/tvlsi15.pdf},
 }
 
-@article{21,
+@article{22,
   title={Networks-on-Chip for FPGAs: Hard, Soft or Mixed?},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   journal={ACM Transactions on Reconfigurable Technology and Systems},
@@ -166,7 +176,7 @@
   pdf={/assets/pdf/trets14.pdf},
 }
 
-@inproceedings{22,
+@inproceedings{23,
   title={Gzip on a chip: High performance lossless data compression on fpgas using opencl},
   author={Mohamed S. Abdelfattah and Andrei Hagiescu and Deshanand Singh},
   booktitle={International Workshop on OpenCL},
@@ -175,7 +185,7 @@
   pdf={/assets/pdf/iwocl14.pdf},
 }
 
-@article{23,
+@article{24,
   title={The Case for Embedded Networks-on-Chip on FPGAs},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   journal={IEEE Micro Magazine},
@@ -184,7 +194,7 @@
   pdf={/assets/pdf/micro14.pdf},
 }
 
-@inproceedings{24,
+@inproceedings{25,
   title={Augmenting FPGAs with Embedded Networks on Chip},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={Workshop on the Intersection of Computer Architecture and Reconfigurable Logic},
@@ -193,7 +203,7 @@
   pdf={/assets/pdf/carl13.pdf},
 }
 
-@inproceedings{25,
+@inproceedings{26,
   title={The Power of Communication: Energy-Efficient NoCs for FPGAs},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -204,7 +214,7 @@
   award2={Selected as one of the <a href=http://www.fpl2015.org/pdf/sig_papers.pdf>most significant papers</a> from the first 25 years of FPL.}
 }
 
-@inproceedings{26,
+@inproceedings{27,
   title={Design tradeoffs for hard and soft FPGA-based Networks-on-Chip},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Technology},
@@ -213,7 +223,7 @@
   pdf={/assets/pdf/fpt12.pdf},
 }
 
-@inproceedings{27,
+@inproceedings{28,
   title={Transparent Structural Online Test for Reconfigurable Systems},
   author={Mohamed S. Abdelfattah and Lars Bauer and Claus Braun and Michael E Imhof and Michael A Kochte and Hongyan Zhang and Jörg Henkel and Hans-Joachim Wunderlich},
   booktitle={International Symposium on On-Line Testing and Robust System Design},
@@ -222,7 +232,7 @@
   pdf={/assets/pdf/iolts12.pdf},
 }
 
-@inproceedings{28,
+@inproceedings{29,
   title={2.2 GHz LC VCO for RFID on a 0.5-μm digital gate-array designed for ultra-thin silicon substrates},
   author={Mohamed S. Abdelfattah and Damir Ferenci and Markus Grözing and Manfred Berroth and Cor Scherjon and Joachim Burghartz},
   booktitle={German Microwave Conference},
@@ -231,7 +241,7 @@
   pdf={/assets/pdf/gemic11.pdf},
 }
 
-@inproceedings{30,
+@inproceedings{31,
   title={Design of a RF Transmitter for RFID Tags in a New Technology with Ultra Thin Silicon Substrates},
   author={Mohamed S. Abdelfattah and Damir Ferenci and Markus Grözing and Manfred Berroth and Cor Scherjon and Joachim N Burghartz},
   booktitle={Workshop on Circuit Design and Digital Signal Processing},
